Fix horizontal overflow

--- a/src/components/NavBar/styles.module.css
+++ b/src/components/NavBar/styles.module.css
@@ -1,4 +1,5 @@
 .container {
+  position: fixed;
   display: flex;
   justify-content: center;
   width: 100%;
@@ -93,13 +94,14 @@
 }
 
 .menu {
-  position: absolute;
+  position: fixed;
   height: 100vh;
   width: 25em;
   background: #21212E;
 }
 
 .overlay {
+  position: fixed;
   width: 100%;
   height: 100vh;
   background: rgba(0, 0, 0, 0.5);
