--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   background: #21212E;
+  overflow: none;
 }
 
 p {
