--- a/src/pages/HomePage/styles.module.css
+++ b/src/pages/HomePage/styles.module.css
@@ -7,7 +7,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: -5em;
   margin-left: 15%;
   width: 100%;
   height: 90vh;
